# xenray

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  BUILD_LINUX.md  BUILD_MACOS.md  CHANGELOG.md  CODE_ANALYSIS.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  add_routing_method.txt  build.py  build_pyinstaller.py  compile.py  config.example.json  debug_caps.py  debug_flet_version.py  debug_interface.py  debug_tray.py  diagnose_flet.py  find_bypass.py  fix_unreachable.py  flake8_final.txt  flake8_report.txt  flake8_report_new.txt  flake8_status.txt  flake_errors.txt  get_proxy_ip_method.txt  nabzram_method.txt  nuitka-crash-report.xml  output.txt  pyproject.toml  pytest.ini  requirements.txt  singbox_debug.txt  test_singbox.json  test_singbox2.json  (+6 more)
.github/workflows/: code-quality.yml  release.yml  tests.yml
assets/: icon.icns  ir_bypass.txt
assets/data/: cities.msgpack.zst
assets/locales/: en.json  fa.json  ru.json  zh.json
docs/: CODE_QUALITY.md  COVERAGE_BADGE.md
hooks/: hook-flet.py  hook-flet_desktop.py  hook-src.py
scripts/: build_appimage.sh  build_city_database.py  create_dmg.sh  download_binaries.py  download_geo_files.py  setup-code-quality.ps1  setup-code-quality.sh  xenray_updater.ps1
src/: __init__.py  cli.py  debug_no_userid.py  debug_task.py  diagnose_perms.py  main.py
src/core/: app_context.py  city_translator.py  config_manager.py  connection_manager.py  connection_orchestrator.py  constants.py  container.py  country_translator.py  flag_colors.py  i18n.py  logger.py  profile_resolver.py  protocols.py  settings.py  subscription_manager.py  types.py  validators.py
src/repositories/: __init__.py  chain_repository.py  config_file_loader.py  dns_repository.py  file_utils.py  profile_repository.py  recent_files_repository.py  routing_repository.py  settings_repository.py  subscription_repository.py
src/services/: active_connectivity_monitor.py  app_update_service.py  auto_reconnect_service.py  bridge_fetcher.py  config_patcher.py  config_utils.py  configuration_processor.py  connection_tester.py  dependency_manager.py  dns_configurator.py  geo_installer.py  geoip_service.py  latency_tester.py  legacy_config_service.py  log_parser.py  network_stability_observer.py  network_stats.py  network_validator.py  passive_log_monitor.py  quality_evaluator.py  rate_limiter_service.py  routing_rules_manager.py  rule_update_service.py  singbox_metrics_provider.py  singbox_service.py  singbox_tun_service.py  startup_service.py  task_scheduler.py  tor_installer.py  tor_service.py  tun2proxy_installer.py  tun2proxy_service.py  tun_injector.py  xray_config_processor.py  xray_installer.py  xray_process_monitor.py  xray_service.py
src/ui/: glow_helper.py  log_viewer.py  main_window.py  server_list.py  theme.py
src/utils/: admin_utils.py  country_flags.py  file_utils.py  link_parser.py  network_interface.py  network_utils.py  platform_utils.py  process_utils.py  system_proxy_linux.py  system_proxy_macos.py  traffic_shaper.py  user_space_throttler.py
tests/: __init__.py  test_admin_utils.py  test_app_context.py  test_chain.py  test_cli.py  test_config.py  test_config_manager.py  test_config_patcher.py  test_config_utils.py  test_connection_orchestrator.py  test_dns_config.py  test_geoip_service.py  test_i18n.py  test_legacy_migration.py  test_link_parser.py  test_link_parser_strict.py  test_monitoring_service.py  test_network_stability_observer.py  test_passive_log_monitor.py  test_process_utils.py  test_profile_manager.py  test_rate_limiter_service.py  test_rule_update_service.py  test_services.py  test_subscription_manager.py  test_translators.py  test_tun_injector.py  test_xray_manager.py
xenray/: __init__.py  cli.py
(+50 files in other folders)
